# pokedex

./: .gitignore  README.md  dockerfile.agent  dockerfile.encoding  dockerfile.notebook  requirements.notebook
agent/: pyproject.toml
agent/agent/: Agent.py  __main__.py  app.py  config.py  config.yaml  encoding.py  format_rag.py  inference.py  instructions.py  intro.py  ollama.py  pokemon_match.py  qdrant.py  rag.py  regex.py  rerank.py  retrieve.py  sorry.py  summarize.py
agent/myAgent/: config.yaml  pyproject.toml
agent/myAgent/myAgent/: __main__.py  app.py  intro.py  is_about_pokemon.py
dockerfiles/: dockerfile.agent  dockerfile.encoding  dockerfile.inference  dockerfile.notebook
encoding/: pyproject.toml
encoding/encoding/: __main__.py  app.py  config.py  config.yaml  embedder.py  reranker.py
inference/: pyproject.toml
inference/inference/: __main__.py  app.py  config.py  config.yaml  embed.py  embedder.py  generate.py  llm.py  rerank.py  reranker.py  vllm.py
k8s/agent/: deployment.yaml  service.yaml  volume.yaml
k8s/cert/: certificate.yaml  issuer.yaml
k8s/encoding/: deployment.yaml  service.yaml  volume.yaml
k8s/inference/: deployment.yaml  service.yaml  volume.yaml
k8s/notebook/: deployment.yaml  service.yaml  volume.yaml
k8s/ollama/: deployment.yaml  service.yaml  volume.yaml
k8s/qdrant/: deployment.yaml  service.yaml  volume.yaml
k8s/webui/: deployment.yaml  ingress.yaml  service.yaml  volume.yaml
myAgent/: config.yaml  pyproject.toml
myAgent/myAgent/: Agent.py  app.py  config.py  format_rag.py  get_rag.py  is_about_pokemon.py  ollama.py  qdrant.py  rag.py  sorry.py  summarize.py
notebook/: pkm.csv  pokemons.ipynb
