[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agent"]
include-package-data = true

[tool.setuptools.package-data]
agent = ["config.yaml"]

[project]
name = "agent"
version = "0.0.0"
description = "Agentic logic service"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "python-multipart",
    "requests",
    "qdrant_client",
    "PyYAML",
    "pydantic",
    "scikit-learn",
    "regex",
    "pandas",
]
