[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["encoding"]
include-package-data = true

[tool.setuptools.package-data]
encoding = ["config.yaml"]

[project]
name = "encoding"
version = "0.0.0"
description = "Encoding service"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "transformers",
    "sentence_transformers",
    "fastapi",
    "uvicorn",
    "httpx",
    "PyYAML",
    "pydantic",
    "accelerate",
]
