[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["inference"]
include-package-data = true

[tool.setuptools.package-data]
inference = ["config.yaml"]

[project]
name = "inference"
version = "0.0.0"
description = "Inference service"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "transformers",
    "sentence_transformers",
    "fastapi",
    "uvicorn",
    "httpx",
    "PyYAML",
    "pydantic",
    "accelerate",
    "vllm",
]
