
[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
myAgent = ["config.yaml"]

[project]
name = "myAgent"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "asyncio",
    "httpx",
    "python-multipart",
    "requests",
    "qdrant_client",
    "PyYAML",
    "pydantic",
]

